kubernetes/apps/media/radarr/manifests/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: radarr-route-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: radarr
  oidc:
    provider:
      issuer: https://accounts.darkfellanetwork.com/realms/DarkfellaNET
    clientID: 345a70b9-dd3e-49cd-b2d5-5af80330130b
    clientSecret:
      name: radarr-secret
    redirectURL: https://radarr.darkfellanetwork.com/oauth2/callback
    logoutPath: /logout
    cookieNames:
      accessToken: radarr-access-token
      idToken: radarr-id-token
  jwt:
    providers:
      - name: keycloak
        issuer: https://accounts.darkfellanetwork.com/realms/DarkfellaNET
        remoteJWKS:
          uri: https://accounts.darkfellanetwork.com/realms/DarkfellaNET/protocol/openid-connect/certs
        extractFrom:
          cookies:
            - radarr-access-token
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        name: allow-by-group
        principal:
          jwt:
            provider: keycloak
            claims:
              - name: groups
                values:
                  - media-admin
      - action: Allow
        name: allow-by-email
        principal:
          jwt:
            provider: keycloak
            claims:
              - name: email
                values:
                  - georgi.panov@darkfellanetwork.com
